--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,33 +31,33 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - target: linux-aarch64-static_lib
-            config: Release
-            runs-on: buildjet-4vcpu-ubuntu-2204-arm
-            build: >
-              CMAKE_OPTIONS="-DCMAKE_POSITION_INDEPENDENT_CODE=ON"
-              PARALLEL_JOB_COUNT=2
-              BUILD_CONFIG=Release
-              ./build-static_lib.sh
-            post-build: tar -czvf $ARCHIVE_DIR/$ARCHIVE_NAME.tgz -C $OUTPUT_DIR .
+          # - target: linux-aarch64-static_lib
+          #   config: Release
+          #   runs-on: buildjet-4vcpu-ubuntu-2204-arm
+          #   build: >
+          #     CMAKE_OPTIONS="-DCMAKE_POSITION_INDEPENDENT_CODE=ON"
+          #     PARALLEL_JOB_COUNT=2
+          #     BUILD_CONFIG=Release
+          #     ./build-static_lib.sh
+          #   post-build: tar -czvf $ARCHIVE_DIR/$ARCHIVE_NAME.tgz -C $OUTPUT_DIR .
 
-          - target: linux-x64-static_lib
-            config: Release
-            runs-on: ubuntu-22.04
-            build: >
-              CMAKE_OPTIONS="-DCMAKE_POSITION_INDEPENDENT_CODE=ON"
-              BUILD_CONFIG=Release
-              ./build-static_lib.sh
-            post-build: tar -czvf $ARCHIVE_DIR/$ARCHIVE_NAME.tgz -C $OUTPUT_DIR .
+          # - target: linux-x64-static_lib
+          #   config: Release
+          #   runs-on: ubuntu-22.04
+          #   build: >
+          #     CMAKE_OPTIONS="-DCMAKE_POSITION_INDEPENDENT_CODE=ON"
+          #     BUILD_CONFIG=Release
+          #     ./build-static_lib.sh
+          #   post-build: tar -czvf $ARCHIVE_DIR/$ARCHIVE_NAME.tgz -C $OUTPUT_DIR .
 
-          - target: osx-universal2-static_lib
-            config: Release
-            runs-on: macos-13-xlarge
-            build: >
-              CMAKE_OPTIONS="-DCMAKE_OSX_ARCHITECTURES=arm64;x86_64"
-              BUILD_CONFIG=Release
-              ./build-static_lib.sh
-            post-build: tar -czvf $ARCHIVE_DIR/$ARCHIVE_NAME.tgz -C $OUTPUT_DIR .
+          # - target: osx-universal2-static_lib
+          #   config: Release
+          #   runs-on: macos-13-xlarge
+          #   build: >
+          #     CMAKE_OPTIONS="-DCMAKE_OSX_ARCHITECTURES=arm64;x86_64"
+          #     BUILD_CONFIG=Release
+          #     ./build-static_lib.sh
+          #   post-build: tar -czvf $ARCHIVE_DIR/$ARCHIVE_NAME.tgz -C $OUTPUT_DIR .
 
           - target: win-x64-static_lib
             config: Release
@@ -65,19 +65,19 @@ jobs:
             build: BUILD_CONFIG=Release ./build-static_lib.sh
             post-build: 7z a $ARCHIVE_DIR/$ARCHIVE_NAME.zip $OUTPUT_DIR/*
             
-          - target: win-x64-static_lib
-            config: Debug
-            runs-on: windows-2022
-            build: >
-              CMAKE_OPTIONS="-DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreadedDebug"
-              BUILD_CONFIG=Debug ./build-static_lib.sh
-            post-build: 7z a $ARCHIVE_DIR/$ARCHIVE_NAME.zip $OUTPUT_DIR/*
+          # - target: win-x64-static_lib
+          #   config: Debug
+          #   runs-on: windows-2022
+          #   build: >
+          #     CMAKE_OPTIONS="-DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreadedDebug"
+          #     BUILD_CONFIG=Debug ./build-static_lib.sh
+          #   post-build: 7z a $ARCHIVE_DIR/$ARCHIVE_NAME.zip $OUTPUT_DIR/*
 
-          - target: wasm-static_lib-simd-threaded
-            config: Release
-            runs-on: ubuntu-22.04
-            build: BUILD_CONFIG=Release ./build-wasm-static_lib.sh
-            post-build: tar -czvf $ARCHIVE_DIR/$ARCHIVE_NAME.tgz -C $OUTPUT_DIR .
+          # - target: wasm-static_lib-simd-threaded
+          #   config: Release
+          #   runs-on: ubuntu-22.04
+          #   build: BUILD_CONFIG=Release ./build-wasm-static_lib.sh
+          #   post-build: tar -czvf $ARCHIVE_DIR/$ARCHIVE_NAME.tgz -C $OUTPUT_DIR .
 
     steps:
       - name: Checkout
